fixed footer spacing

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,3 +1,7 @@
-.footer {
-    background-color: blue;
+.box {
+    margin-left: 40px;
+}
+
+.socialLinks {
+    margin-bottom: 0.5rem;
 }
